--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -5,7 +5,8 @@
   align-items: center;
   background-color: #ffffff; 
   padding: 20px 50px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  height:80px; 
 }
 
 .logo img {
